# sannikov-dev

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: operations.md
examples/: invoice.json
hub/: __init__.py  api.py  cba.py  cli.py  db.py  invoices.py  taxes.py  telegram.py
tests/: test_cba.py  test_db.py  test_invoices.py  test_taxes.py
